Fixed Passwords, added Stage Reset to Who's On First

--- a/BombThingy/BombThingy.csproj
+++ b/BombThingy/BombThingy.csproj
@@ -76,6 +76,12 @@
     <Compile Include="KeyPadForm.Designer.cs">
       <DependentUpon>KeyPadForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="KnobForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="KnobForm.Designer.cs">
+      <DependentUpon>KnobForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MazeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -141,6 +147,9 @@
     <EmbeddedResource Include="KeyPadForm.resx">
       <DependentUpon>KeyPadForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="KnobForm.resx">
+      <DependentUpon>KnobForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MazeForm.resx">
       <DependentUpon>MazeForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -184,6 +193,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="readme.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -346,6 +356,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Password.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Knob.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
